index.html updated

--- a/HappyBirthday.html
+++ b/HappyBirthday.html
@@ -8,10 +8,10 @@
 
 	<body>
 		<div class="container">
-			<h1>Happy Birthday</h1>
+			<h1>Happy Birthday Mahi</h1>
 			 <div class="first-text ">Hello</div>
 			 <div class="second-text">I know it is still not your birthday yet!</div>
-			 <div class="third-text">but I’m gonna start celebrating it from today.</div>
+			 <!-- <div class="third-text">but I’m gonna start celebrating it from today.</div> -->
 			 <div class="fourth-text">Choosing between Advance and Belated,</div>
 			 <div class="fifth-text">I’d rather pick the one that will let you know how I feel ahead of time.</div>
 			 <div class="sixth-text">Who says birthday must celebrated for just one day?</div>
