--- a/HappyBirthday.html
+++ b/HappyBirthday.html
@@ -8,15 +8,15 @@
 
 	<body>
 		<div class="container">
-			<h1>Happy Birthday Siri</h1>
+			<h1>Happy Birthday Sri Archana 🔥</h1>
 			 <div class="first-text ">Hello</div>
 			 <div class="second-text">I know it is still not your birthday yet!</div>
 			 <div class="third-text">but I’m gonna start celebrating it from today.</div>
 			 <div class="fourth-text">Choosing between Advance and Belated,</div>
 			 <div class="fifth-text">I’d rather pick the one that will let you know how I feel ahead of time.</div>
 			 <div class="sixth-text">Who says birthday must celebrated for just one day?</div>
-			 <div class="seventh-text">In my life, I’m always number 2</div>
-			 <div class="eight-text">But for you? I’ll always aim to be number 1</div>
+			 <!-- <div class="seventh-text">In my life, I’m always number 2</div>
+			 <div class="eight-text">But for you? I’ll always aim to be number 1</div> -->
 			 <div class="ninth-text">So here I am, greeting you, days before your birthday.</div>
 			 <div class="tenth-text">I’ll beat everyone to the punch and be the first one to say it:</div>
 			 <div class="eleventh-text">I hope that everything in your life falls into place,</div>
