--- a/HappyBirthday.html
+++ b/HappyBirthday.html
@@ -8,7 +8,8 @@
 
 	<body>
 		<div class="container">
-			<h1>Happy Birthday Sri Archana 🔥</h1>
+			<h1>Happy Birthday </h1>
+			<h2>Sri Archana 🔥</h2>
 			 <div class="first-text ">Hello</div>
 			 <div class="second-text">I know it is still not your birthday yet!</div>
 			 <div class="third-text">but I’m gonna start celebrating it from today.</div>
