--- a/HappyBirthday.html
+++ b/HappyBirthday.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="container">
 			<h1>Happy Birthday </h1>
-			<h2>Maheswari 🔥</h2>
+			<h2>Maheswari & Bindhu🔥</h2>
 			<br>
 			<br>
 			 <div class="first-text ">Hello</div>
